[project]
name = "colbert"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "bitarray",
    "datasets",
    "gitpython",
    "jupyter",
    "jupyterlab",
    "ninja",
    "scipy",
    "tqdm",
    "transformers",
    "ujson",
    "flask",
    "python-dotenv",
    "torch==1.13.1",
    "torchaudio==0.13.1",
    "torchvision==0.14.1",
]
